2013-03-13  Xavi Artigas  <xartigas@fluendo.com>

	* Makefile.am:
	  - Do not install the example program.

2013-03-12  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_thread_function):
	  - Fix sockets watched by select(). This was causing 100% cpu sometimes.

2013-03-07  Jorge Zapata  <jzapata@fluendo.com>

	* lib/fludownloader.c: (fludownloader_new_task):
	Set "fludownloader" as the user agent

2013-03-07  Julien Moutte <julien@fluendo.com>

	* examples/multidl.c: (data_cb), (done_cb): Fix build on 64 bits.

2013-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_report_task_done):
	  - Return valid status codes for file transfers. Apparently libCurl does
	    not provide them, so we only check if the amount of downloaded data
	    is > 0.

2013-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_schedule_tasks):
	  - Make extra sure that files are not overlapped with HTTP downloads.

2013-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	  - Update example with mixed file/HTTP downloads.

2013-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_schedule_tasks), (fludownloader_new_task):
	  - Do not allow file:// downloads to be overlapped with HTTP ones, since
	    packets arrive much earlier and therefore out-of-order.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.h:
	  - A bit of comments

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_abort_task):
	* lib/fludownloader.h:
	  - Small change to API to avoid redundant parameter.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_report_task_done), (_write_function),
	(_process_curl_messages):
	  - Handle correctly the case where a single call to curl_process() produces
	    data for two tasks.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c:
	* lib/fludownloader.h: