@@ -15,12 +15,14 @@ data_cb (void *buffer, size_t size, gpointer user_data,
 }
 
 void
-done_cb (int response_code, size_t downloaded_size, gpointer user_data,
+done_cb (FluDownloaderTaskOutcome outcome, int http_status_code,
+    size_t downloaded_size, gpointer user_data,
     FluDownloaderTask *task)
 {
-  g_printf ("Transfer #%p done. Code = %d. %zd downloaded bytes (%s).\n",
-      user_data, response_code, downloaded_size,
-      fludownloader_task_get_url (task));
+  g_printf ("Transfer #%p done %s. HTTP Code = %d. %zd downloaded bytes (%s).\n",
+      user_data,
+      outcome == FLUDOWNLOADER_TASK_OK ? "OK" : "WITH ERRORS", http_status_code,
+      downloaded_size, fludownloader_task_get_url (task));
 }
 
 int
@@ -83,7 +85,7 @@ main (int argc, char *argv[])
   /* Test file downloads mixed with HTTP */
   fludownloader_lock (dl1);
   fludownloader_new_task (dl1, "http://dash.edgesuite.net/adobe/hdworld_dash/hdworld_seg_hdworld_4496kbps_ffmpeg.mp4.video_temp1.m4s", NULL, (gpointer) 0, FALSE);
-  fludownloader_new_task (dl1, "file:///home/fluendo/psvn/libfludownloader/aclocal.m4", NULL, (gpointer) 1, FALSE);
+  fludownloader_new_task (dl1, "file:///home/fluendo/psvn/libfludownloader/aclocal.m42", NULL, (gpointer) 1, FALSE);
   fludownloader_new_task (dl1, "http://dash.edgesuite.net/adobe/hdworld_dash/hdworld_seg_hdworld_4496kbps_ffmpeg.mp4.video_temp2.m4s", NULL, (gpointer) 2, FALSE);
   fludownloader_new_task (dl1, "file:///home/fluendo/psvn/libfludownloader/configure", NULL, (gpointer) 3, FALSE);
   fludownloader_new_task (dl1, "file:///home/fluendo/psvn/libfludownloader/ltmain.sh", NULL, (gpointer) 4, FALSE);
